--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+.rdrDayToDay:not(.rdrDayPassive) .rdrInRage ~ .rdrDayNumber span::after,
+.rdrDayToDay:not(.rdrDayPassive) .rdrStartEdge ~ .rdrDayNumber span::after,
+.rdrDayToDay:not(.rdrDayPassive) .rdrEndEdge ~ .rdrDayNumber span::after,
+.rdrDayToDay:not(.rdrDayPassive) .rdrSelected ~ .rdrDayNumber span::after{
+    background: #fff !important;
+}
+
+.rdeDayToDay .rdrDayNumber span:after {
+    background: #ed1d24 !important;
+}
+
+.rdrMonthAndYearPickers {
+    font-size: 16px;
+}
+
+.rdrDayNumber, .rdrWeekDay {
+    color: #1e1f23 !important;
+    font-weight: 500 !important;
+}
+
 @layer base {
     body {
         @apply text-primary bg-body;
